# EvoNote

./: .gitignore  404.html  CNAME  LICENSE  README.md  index.html  project_tree.json  pyproject.toml  requirements.txt
assets/: 0. TL_DR.html-04cf456a.js  0. TL_DR.html-46152a18.js  1. Indexing is non-trivial.html-d3e540bd.js  1. Indexing is non-trivial.html-de27ef5e.js  2. Tree indexing.html-0edd65fc.js  2. Tree indexing.html-a4e421ab.js  2.1 Method of Loci and sparsity.html-042d72fb.js  2.1 Method of Loci and sparsity.html-c46dd2f7.js  3. Copernicus and indexing.html-9b0fa442.js  3. Copernicus and indexing.html-ecb22cc2.js  4. Continuous and discrete knowledge.html-cd299de8.js  4. Continuous and discrete knowledge.html-e31de42f.js  4.1 Interface of continuous and discrete.html-20711f93.js  4.1 Interface of continuous and discrete.html-effb1b18.js  4.2 Tyranny of science.html-c043c0d4.js  4.2 Tyranny of science.html-eb11251e.js  404.html-4914507a.js  Comments on previous work.html-d67d0a28.js  Comments on previous work.html-e69171fc.js  app-1ed94c4d.js  index.html-2bf63421.js  index.html-46503449.js  index.html-5ba6cdc3.js  index.html-71be8ada.js  index.html-c744da5c.js  index.html-d95fdf8c.js  index.html-e38d5134.js  index.html-e733f15c.js  style-f8de3c48.css
development/: index.html
doc_in_py/: README.md  comment_parser.py  core.py
docinpy/: README.md  __init__.py  comment_parser.py  core.py  decorator.py  docs_parser.py  index.html
docs/: .gitignore  CNAME  README.md  index.md  package.json  pnpm-lock.yaml  pull_request_template.md
evonote/: .tree.yml  ui.py  (+5 more)
(+200 files in other folders)
